// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component should render App component 1`] = `
<div>
  <div
    id="feed"
  >
    <Feed
      ramsFeed={Array []}
    />
  </div>
</div>
`;

exports[`Feed component should render Feed component 1`] = `
<App>
  <div>
    <div
      id="feed"
    >
      <Feed
        ramsFeed={Array []}
      />
    </div>
  </div>
</App>
`;
